Countries overflow fix

--- a/css/main.css
+++ b/css/main.css
@@ -36,6 +36,10 @@
     overflow-x:hidden;
 }
 
+#contact .container {
+    overflow: visible;
+}
+
 .popover.top{
     margin-top: -55px;
 }
